<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/showdetail"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".MainActivity"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
            android:layout_width="@dimen/_dp_0"
            android:layout_height="@dimen/_dp_200"
            android:src="@drawable/loading"
            android:scaleType="centerCrop"
            android:id="@+id/clickPicture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/todo"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/_dp_0"
            android:layout_height="match_parent"
            android:background="@drawable/shapeone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/_dp_190"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/constraintLayout">


        <androidx.cardview.widget.CardView
                android:id="@+id/cv1"
                android:layout_width="@dimen/_dp_0"
                android:layout_height="wrap_content"
                app:cardElevation="@dimen/_dp_5"
                android:layout_margin="@dimen/_dp_16"
                app:cardCornerRadius="@dimen/_dp_10"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:padding="@dimen/_dp_24"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/mobile_number"
                          android:textColor="#888888"
                          android:id="@+id/tv1"
                          app:layout_constraintStart_toStartOf="parent"
                          app:layout_constraintTop_toTopOf="parent"
                          android:textSize="@dimen/_sp_14"
                          android:fontFamily="@font/poppins"
                          tools:ignore="UnusedAttribute"/>

                <TextView
                        app:layout_constraintStart_toStartOf="@id/tv1"
                        app:layout_constraintTop_toBottomOf="@id/tv1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number"
                        android:id="@+id/number"
                        android:textColor="@color/detailscolor"
                        android:textSize="@dimen/_sp_18"
                        android:fontFamily="@font/poppins"
                        tools:ignore="UnusedAttribute"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_dp_0"
                android:layout_height="wrap_content"
                app:cardElevation="@dimen/_dp_5"
                android:id="@+id/cv2"
                android:layout_margin="@dimen/_dp_16"
                app:cardCornerRadius="@dimen/_dp_10"
                app:layout_constraintTop_toBottomOf="@id/cv1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:padding="@dimen/_dp_24"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/semail"
                          android:textColor="#888888"
                          android:id="@+id/tv2"
                          app:layout_constraintStart_toStartOf="parent"
                          app:layout_constraintTop_toTopOf="parent"
                          android:textSize="@dimen/_sp_14"
                          android:fontFamily="@font/poppins"
                          tools:ignore="UnusedAttribute"/>

                <TextView
                        app:layout_constraintStart_toStartOf="@id/tv2"
                        app:layout_constraintTop_toBottomOf="@id/tv2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:id="@+id/email"
                        android:textColor="@color/detailscolor"
                        android:textSize="@dimen/_sp_18"
                        android:fontFamily="@font/poppins"
                        tools:ignore="UnusedAttribute"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:id="@+id/cv3"
                android:layout_width="@dimen/_dp_0"
                android:layout_height="wrap_content"
                app:cardElevation="@dimen/_dp_5"
                android:layout_margin="@dimen/_dp_16"
                app:cardCornerRadius="@dimen/_dp_10"
                app:layout_constraintTop_toBottomOf="@id/cv2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:padding="@dimen/_dp_24"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/visit"
                          android:textColor="#888888"
                          android:id="@+id/tv3"
                          app:layout_constraintStart_toStartOf="parent"
                          app:layout_constraintTop_toTopOf="parent"
                          android:textSize="@dimen/_sp_14"
                          android:fontFamily="@font/poppins"
                          tools:ignore="UnusedAttribute"/>

                <TextView
                        app:layout_constraintStart_toStartOf="@id/tv3"
                        app:layout_constraintTop_toBottomOf="@id/tv3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/visit"
                        android:id="@+id/visits"
                        android:textColor="@color/detailscolor"
                        android:textSize="@dimen/_sp_18"
                        android:fontFamily="@font/poppins"
                        tools:ignore="UnusedAttribute"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <Button android:layout_width="match_parent"
                android:text="@string/exit"
                app:layout_constraintTop_toBottomOf="@id/cv3"
                android:layout_margin="@dimen/_dp_24"
                android:textColor="@color/white"
                android:id="@+id/exit"
                android:textAllCaps="false"
                android:background="@drawable/buttonbg"
                android:layout_height="wrap_content"
        />



    </androidx.constraintlayout.widget.ConstraintLayout>

       <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins"
            android:textSize="@dimen/_sp_30"
            app:layout_constraintStart_toStartOf="@id/clickPicture"
            android:layout_marginLeft="@dimen/_dp_32"
            android:layout_marginBottom="@dimen/_dp_30"
            app:layout_constraintBottom_toBottomOf="@id/clickPicture"
            tools:ignore="UnusedAttribute"
            android:layout_marginStart="@dimen/_dp_32"/>


</androidx.constraintlayout.widget.ConstraintLayout>
