<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/parent"
        android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".MainActivity" xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_dp_200"
            android:src="@drawable/photo"
            android:scaleType="centerCrop"
            android:id="@+id/imageview"
            android:contentDescription="@string/todo"/>


    <Button
            android:text="@string/editPhoto"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@drawable/shape_edit"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_dp_40"
            android:id="@+id/editPhotoButton"
            android:layout_marginTop="@dimen/_dp_40"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_dp_20"
            android:layout_marginRight="@dimen/_dp_20"/>

    <TextView
            android:text="@string/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dummytext"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins"
            android:textSize="@dimen/_sp_30"
            app:layout_constraintStart_toStartOf="@id/imageview"
            android:layout_marginLeft="@dimen/_dp_24"
            android:layout_marginBottom="@dimen/_dp_24"
            app:layout_constraintBottom_toBottomOf="@id/imageview"
            tools:ignore="UnusedAttribute"
            android:layout_marginStart="@dimen/_dp_32"/>



    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/shapeone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="190dp"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/constraintLayout">


        <TextView
                android:fontFamily="@font/poppins"
                android:textSize="@dimen/_sp_18"
                android:textColor="#333333"
                android:layout_marginLeft="@dimen/_dp_24"
                android:layout_marginTop="@dimen/_dp_24"
                android:layout_marginStart="@dimen/_dp_24"
                android:text="@string/contact_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="UnusedAttribute"/>

        <androidx.cardview.widget.CardView
                android:id="@+id/cv1"
                android:layout_width="@dimen/_dp_0"
                android:layout_height="wrap_content"
                app:cardElevation="@dimen/_dp_5"
                android:layout_marginEnd="@dimen/_dp_24"
                android:layout_marginRight="@dimen/_dp_24"
                android:layout_marginTop="@dimen/_dp_20"
                app:cardCornerRadius="@dimen/_dp_5"
                app:layout_constraintTop_toBottomOf="@id/textView"
                app:layout_constraintStart_toStartOf="@id/textView"
                app:layout_constraintEnd_toEndOf="parent"
        >

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:padding="@dimen/_dp_18"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                <EditText
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:id="@+id/name"
                        android:padding="@dimen/_dp_4"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/enter_name"
                        android:textColor="@color/detailscolor"
                        android:textSize="@dimen/_sp_16"
                        android:fontFamily="@font/poppins"
                        tools:ignore="Autofill,LabelFor,UnusedAttribute"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:id="@+id/cv2"
                android:layout_marginTop="@dimen/_dp_24"
                app:layout_constraintStart_toStartOf="@id/cv1"
                app:layout_constraintEnd_toEndOf="@id/cv1"
                app:layout_constraintTop_toBottomOf="@id/cv1"
                android:layout_width="@dimen/_dp_0"
                android:layout_height="wrap_content"
                app:cardElevation="@dimen/_dp_5"
                app:cardCornerRadius="@dimen/_dp_5"
        >

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:padding="@dimen/_dp_18"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                <EditText
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:id="@+id/email"
                        android:singleLine="true"
                        android:padding="@dimen/_dp_4"
                        android:imeOptions="actionDone"
                        android:inputType="textEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/email"
                        android:textColor="@color/detailscolor"
                        android:textSize="@dimen/_sp_16"
                        android:fontFamily="@font/poppins"
                        tools:ignore="Autofill,LabelFor,UnusedAttribute"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>



        <Button android:layout_width="match_parent"
                android:text="@string/next"
                app:layout_constraintTop_toBottomOf="@id/cv2"
                android:layout_margin="@dimen/_dp_24"
                android:textColor="@color/white"
                android:id="@+id/next"
                android:textAllCaps="false"
                android:background="@drawable/buttonbg"
                android:layout_height="wrap_content"
        />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
