<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:id="@+id/parent"
        android:background="@color/white"
        android:layout_height="match_parent"
        tools:context=".VerifyOtpFragment">

    <androidx.cardview.widget.CardView
            android:id="@+id/cv1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="@dimen/_dp_0"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/_dp_4"
            android:layout_marginStart="@dimen/_dp_20"
            android:layout_marginEnd="@dimen/_dp_20"
            app:cardCornerRadius="@dimen/_dp_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:padding="@dimen/_dp_10"
                android:layout_height="match_parent">
            <Button
                    android:text="@string/verify"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/verifyOtp"
                    android:background="@color/main_color"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="@+id/firstPinView"
                    app:layout_constraintStart_toStartOf="@+id/firstPinView"
                    android:layout_marginTop="@dimen/_dp_40"
                    app:layout_constraintTop_toBottomOf="@+id/firstPinView"
                    />

            <ProgressBar
                    android:id="@+id/progressBar_cyclic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="50dp"
                    android:progressTint="@color/main_color"
                    android:minWidth="50dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="@dimen/_dp_40"
                    app:layout_constraintTop_toBottomOf="@+id/firstPinView" tools:ignore="UnusedAttribute"/>


            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/timer"
                    android:text="@string/_00_00"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/main_color"
                    android:textSize="@dimen/_sp_40"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="@dimen/_dp_30"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="UnusedAttribute"/>
            <TextView
                    android:text="@string/sec_remaining"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    android:textSize="@dimen/_sp_20"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toEndOf="@+id/timer"
                    app:layout_constraintBottom_toBottomOf="@+id/timer"
                    app:layout_constraintTop_toTopOf="@+id/timer"
                    app:layout_constraintVertical_bias="0.60"/>


            <com.chaos.view.PinView
                    android:id="@+id/firstPinView"
                    style="@style/PinWidget.PinView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:cursorColor="@color/main_color"
                    app:cursorWidth="2dp"
                    app:hideLineWhenFilled="false"
                    app:itemCount="6"
                    app:itemHeight="45dp"
                    app:itemRadius="4dp"
                    app:itemSpacing="3dp"
                    app:itemWidth="40dp"
                    app:lineColor="@color/main_color"
                    app:lineWidth="1dp"
                    app:viewType="rectangle"
                    app:layout_constraintTop_toBottomOf="@id/mobiletext"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="@dimen/_dp_60"/>

            <TextView
                    android:text="@string/please_"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/mobiletext"
                    android:textSize="@dimen/_sp_16"
                    android:gravity="center"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@id/firstPinView"
                    app:layout_constraintEnd_toEndOf="@id/firstPinView"
                    app:layout_constraintTop_toBottomOf="@id/timer"
                    app:layout_constraintBottom_toTopOf="@id/firstPinView" android:layout_marginTop="16dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>