<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent"
        android:id="@+id/parentMain"
        tools:context=".MainActivity">



    <TextView
            android:text="@string/welcome"
            android:fontFamily="@font/poppins"
            android:textSize="@dimen/_sp_30"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/_dp_20"
            android:layout_marginStart="@dimen/_dp_20"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/_dp_80"/>


    <androidx.cardview.widget.CardView
            android:id="@+id/cv1"
            app:layout_constraintTop_toBottomOf="@id/textView2"
            android:layout_width="@dimen/_dp_0"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/_dp_4"
            android:layout_marginStart="@dimen/_dp_20"
            android:layout_marginEnd="@dimen/_dp_20"
            android:layout_marginTop="@dimen/_dp_60"
            app:cardCornerRadius="@dimen/_dp_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:padding="@dimen/_dp_10"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/til1"
                    android:layout_marginTop="@dimen/_dp_20"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:fontFamily="@font/poppins"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_dp_50"
                        android:inputType="number"
                        android:ems="8"
                        android:padding="@dimen/_dp_5"
                        android:singleLine="true"
                        android:imeOptions="actionDone"
                        android:maxLength="10"
                        android:id="@+id/number"
                        android:hint="@string/enter_phone_number"
                        tools:ignore="Autofill,UnusedAttribute"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                    android:background="@drawable/buttonbg"
                    android:text="@string/log_in"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/white"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:id="@+id/login"
                    android:layout_marginBottom="@dimen/_dp_20"
                    android:layout_marginTop="@dimen/_dp_35"
                    app:layout_constraintTop_toBottomOf="@+id/til1"
                    app:layout_constraintEnd_toEndOf="@id/til1"
                    app:layout_constraintStart_toStartOf="@id/til1"
                    tools:ignore="UnusedAttribute"/>

            <ProgressBar
                    android:id="@+id/progressBar_cyclic"
                    android:layout_width="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="@dimen/_dp_20"
                    android:layout_height="wrap_content"
                    android:minHeight="50dp"
                    android:progressTint="@color/main_color"
                    android:minWidth="50dp"
                    android:layout_marginTop="@dimen/_dp_35"
                    app:layout_constraintTop_toBottomOf="@+id/til1"
                    app:layout_constraintEnd_toEndOf="@+id/til1"
                    app:layout_constraintStart_toStartOf="@+id/til1"
                    tools:ignore="UnusedAttribute"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>